# NCCA-py-nglExamples

./: .gitignore  DemoUI.ui  README.md  RunDemos.py  pyproject.toml
BlankPySDL3/: main.py
BlankPySide6NGL/: main.py  using_mixin.py
FBODemos/Blit/: err  main.py
FBODemos/SimpleFBO/: main.py
ObjViewer/: ObjViewer.py
ObjViewer/textures/.mayaSwatches/: ratGrid.png_hcm.swatch
PBR/PBRTexture/: main.py  texture_pack.py
PBR/PBRTexture/textures/: textures.json
PBR/SimplePBR/: main.py
PBR/SimplePBR/shaders/: PBRFragment.glsl
SimplePyNGL/: PySideSimpleNGL.py  SDL3NGL.py
VAOPrimitives/: main.py
VertexArrayObject/Boid/: main.py
VertexArrayObject/BoidShaded/: main.py
VertexArrayObject/ChangingVAO/: main.py
VertexArrayObject/ChangingVAO/.ropeproject/: autoimport.db
VertexArrayObject/ChangingVAOMultiBuffer/: main.py
VertexArrayObject/ExtendedVAOFactory/: MultiBufferIndexVAO.py  main.py
VertexArrayObject/ExtendedVAOFactory/shaders/: ColourFragment.glsl  ColourVertex.glsl
VertexArrayObject/MultiBufferVAO/: main.py
VertexArrayObject/MultiBufferVAO/shaders/: PhongFragment.glsl  PhongVertex.glsl
VertexArrayObject/SimpleIndexVAOFactory/: main.py
VertexArrayObject/SimpleIndexVAOFactory/shaders/: ColourFragment.glsl  ColourVertex.glsl
VertexArrayObject/Sphere/: main.py
VertexArrayObject/Sphere/shaders/: TextureFragment.glsl  TextureVertex.glsl
